--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Itty Bizzy</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    </link>
   </head>
-  <body>
+  <body style="background-color:rgb(219, 219, 219)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
